--- a/public/frontend/assets/css/feature.css
+++ b/public/frontend/assets/css/feature.css
@@ -3,7 +3,7 @@
 
 }
 
-.hero-with-img  {
+.hero-with-img {
     background-image: url('../images/features/background.svg');
     min-height: 27.938rem;
 }
@@ -12,12 +12,13 @@
 .hero-image-header .img {
     margin-top: -5.25rem;
     width: 58.25rem;
-    min-height:26.313rem;
+    min-height: 26.313rem;
 }
 
-.hero-image-header .img img{
+.hero-image-header .img img {
     height: 33.875rem;
 }
+
 /* .btn-work-with-us {
     margin-bottom: 31px;
 } */
@@ -38,4 +39,230 @@
     line-height: 38.4px;
     color: #3A3A3A;
 
+}
+
+/*  ################################## feature slider ###############################################  */
+.feature-slider .swiper-slide__content {
+
+    padding: 24px 15px 24px 14px;
+    border-radius: 16px;
+    background-color: var(--white-color);
+    height: 328px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+}
+
+
+.feature-slider .swiper-slide__content img {
+    width: 82px;
+    height: 82px;
+    padding: 7.35px 8.43px 8.35px 9.43px;
+
+
+}
+
+.feature-slider .swiper-slide__content h3 {
+
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 38.4px;
+    text-align: center;
+    color: #29387E;
+    margin-top: 8px;
+    margin-bottom: 16px;
+
+
+}
+
+.feature-slider .swiper-slide__content p {
+    color: #6B6B6B;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 25.6px;
+    text-align: center;
+
+}
+
+.feature-slider .swiper-slide__content .read-more {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 20px;
+    justify-content: end !important;
+    width: 100%;
+}
+
+.feature-slider .swiper-slide__content .read-more a {
+
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 25.6px;
+    color: #1798D5;
+
+
+}
+
+.feature-slider .swiper-slide__content .read-more span {
+
+
+    width: 25px;
+    height: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    border: 2px solid #1798D5;
+    background-color: var(--white-color);
+
+
+
+}
+
+.feature-slider .swiper-slide__content .read-more span i {
+    color: #1798D5;
+    font-size: 16px;
+}
+
+.swiper-slider-button {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    gap: 30px;
+    margin-top: 10px;
+}
+
+.swiper-slider-button img {
+    width: 38px;
+    height: 38px;
+}
+
+@media (max-width: 1200px) {
+    .feature-slider .swiper-slide__content {
+
+        padding: 24px 14px 24px 15px;
+
+
+    }
+
+
+    .feature-slider .swiper-slide__content img {
+
+        width: 82px;
+        height: 82px;
+        padding: 7px 8.32px 7.01px 8.4px;
+
+
+    }
+
+
+
+
+}
+
+/* statistic */
+
+.statistic .row {
+    width: 90%;
+    margin: auto;
+    margin-top: 174px !important;
+    margin-bottom: 174px;
+    padding: 20px 51px 20px 52px;
+
+    border-radius: 24px;
+
+    background: var(--white-color);
+}
+
+.statistic .content {
+    gap: 8px;
+    display: flex;
+    align-items: center;
+}
+
+.statistic .reviews__top img {
+    width: 68.09px;
+    height: 68.07px;
+
+}
+
+.statistic .reviews__border {
+    border-right: 1px solid #CDCDCD;
+    border-left: 1px solid #CDCDCD;
+   
+  justify-content: center;
+}
+
+.statistic .reviews__bottom h2 {
+
+    font-size: 36px;
+    font-weight: 600;
+    line-height: 57.6px;
+    color: #29387E;
+
+
+}
+
+.statistic .reviews__bottom p {
+
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 38.4px;
+
+    color: #838383;
+
+}
+
+@media (max-width: 1200px) {
+
+
+    .statistic .row {
+
+        margin-top: 27px !important;
+        margin-bottom: 41px;
+        /* width: 343px; */
+        padding: 8px 12px 8px 12px;
+        border-radius: 16px;
+        width: 100%;
+    }
+
+
+    .statistic .content {
+        gap: 0px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .statistic .reviews__top img {
+        width: 30px;
+        height: 30px;
+
+    }
+
+    .statistic .reviews__bottom {
+        text-align: center;
+    }
+
+    .statistic .reviews__bottom h2 {
+
+
+
+        font-size: 18px;
+
+        line-height: 28.8px;
+
+
+    }
+
+    .statistic .reviews__bottom p {
+
+
+        font-size: 12px;
+
+        line-height: 19.2px;
+
+
+
+    }
 }
