--- a/public/frontend/assets/css/home.css
+++ b/public/frontend/assets/css/home.css
@@ -544,3 +544,100 @@ line-height: 28.8px !important;
     
     }
 }
+/* dddddddddddddddddddddddddddddddddddddddddddd */
+
+.header{
+    margin-bottom: 200px
+}
+
+.header__top {
+    height: 100vh;
+    width: 100%;
+    background: url('../images/hero-image-sm.svg') center/cover no-repeat;
+ 
+}
+
+.header__content {
+    padding-top: 24px;
+    text-align: center;
+}
+
+.header__content h1 {
+    font-size: 60px;
+    font-weight: 700;
+    line-height: 96px;
+    text-align: center;
+    color: var(--white-color);
+
+
+
+}
+
+.header__content p {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 32px;
+    text-align: center;
+    color: var(--white-color);
+    margin-top: 16px;
+    margin-bottom: 40px;
+}
+
+.header__content .btn {
+    margin-bottom: 57px;
+}
+
+.header__social {
+    gap: 24px;
+    position: absolute;
+    left: 53px;
+    top: 30%;
+    z-index: 99;
+}
+
+.header__social div {
+    width: 45px;
+    height: 45px;
+}
+
+.header__img-container{
+position: relative;
+}
+.header__img-container .header__square{
+position: absolute;
+bottom: -76px;
+}
+.header__img-container{
+margin-bottom: -56px;
+}
+@media (max-width: 992px) {
+.header__content {
+    padding-top: 13px;
+}
+
+.header__content h1 {
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 38.4px;
+}
+
+.header__content p {
+    margin-top: 8px;
+    margin-bottom: 16px;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 22.4px;
+}
+
+.header__square {
+    display: none !important;
+}
+
+.header__social {
+    display: none !important;
+}
+
+
+.header__img-container{
+margin-bottom: -98px;
+}}
