--- a/public/frontend/assets/css/login.css
+++ b/public/frontend/assets/css/login.css
@@ -155,7 +155,7 @@ body {
 }
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 992px) {
     .login-img{
         display: none;
     }
@@ -171,7 +171,7 @@ body {
         font-weight: 600;
         font-size: 24px;
         line-height: 38.4px;
-        text-align: left !important;
+        /* text-align: left !important; */
     }
   
 }
