--- a/public/frontend/assets/css/main.css
+++ b/public/frontend/assets/css/main.css
@@ -273,7 +273,7 @@ a {
     color: #2f2f2f;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
     .hero .hero-content h1 {
         font-size: 24px;
         line-height: 38.4px;
@@ -283,6 +283,9 @@ a {
         font-weight: 500;
         font-size: 12px;
         line-height: 19.2px;
+    }
+    .hero .hero-content {
+        padding-top: 26px !important;
     }
 }
 
