--- a/public/frontend/assets/css/home-ar.css
+++ b/public/frontend/assets/css/home-ar.css
@@ -6,3 +6,40 @@
     padding-right: 0 !important;
     padding-left: 30px;
 }
+
+/* ################## av-sender#3333333333333 */
+
+/* .av-sender .av-sender__card {
+
+    padding-right: 15px;
+
+} */
+
+
+/* .av-sender .av-sender__bottom .left {
+    z-index: 22;
+    position: absolute;
+    top: -60px;
+   right: 0; 
+/* }
+
+@media (max-width: 992px) {
+    .av-sender .av-sender__bottom .av-sender__card{
+        padding-right: 8px;
+        }
+       
+
+        .av-sender .av-sender__bottom .left {
+            z-index: 22;
+            position: absolute;
+            top: -60px;
+           right:  0;
+        }
+
+        .av-sender .av-sender__card img {
+           
+            right: 0;
+        }
+} */
+ 
+
