--- a/public/frontend/assets/css/feature.css
+++ b/public/frontend/assets/css/feature.css
@@ -23,34 +23,21 @@
     margin-bottom: 31px;
 } */
 
-/*  ################################## wrapper###############################################  */
 
-
-.wrapper .wrapper-content h2 {
-    font-weight: 600;
-    font-size: 40px;
-    line-height: 64px;
-    color: var(--secondary-color);
-}
-
-.wrapper .wrapper-content p {
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 38.4px;
-    color: #3A3A3A;
-
-}
 
 /*  ################################## feature slider ###############################################  */
+.swiper-slide{
+    height: auto !important;
+}
 .feature-slider .swiper-slide__content {
-
     padding: 24px 15px 24px 14px;
     border-radius: 16px;
     background-color: var(--white-color);
-    height: 328px;
+    min-height: 328px;
     display: flex;
     align-items: center;
     flex-direction: column;
+    height: 100%;
 
 }
 
@@ -89,7 +76,7 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    margin-top: 20px;
+    margin-top: auto;
     justify-content: end !important;
     width: 100%;
 }
@@ -133,27 +120,40 @@
     margin-top: 10px;
 }
 
-.swiper-slider-button img {
-    width: 38px;
-    height: 38px;
+
+.swiper-slider-button>div {
+    width: 36px;
+    height: 36px;
+    opacity: 0px;
+    border-radius: 40%;
+    background: #C3C3C3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.btn-swiper-button-prev:not(.swiper-button-disabled), .btn-swiper-button-next:not(.swiper-button-disabled) {
+    background: #002F87 !important;
+
+}
+
+.swiper-slider-button i {
+    color: var(--white-color);
+    font-size: 10px;
+
 }
 
 @media (max-width: 1200px) {
     .feature-slider .swiper-slide__content {
-
         padding: 24px 14px 24px 15px;
-
-
     }
-
-
     .feature-slider .swiper-slide__content img {
 
         width: 82px;
         height: 82px;
         padding: 7px 8.32px 7.01px 8.4px;
 
-
     }
 
 
@@ -161,108 +161,44 @@
 
 }
 
-/* statistic */
 
-.statistic .row {
-    width: 90%;
-    margin: auto;
-    margin-top: 174px !important;
-    margin-bottom: 174px;
-    padding: 20px 51px 20px 52px;
 
-    border-radius: 24px;
-
-    background: var(--white-color);
+/*  ################################## wrapper###############################################  */
+.wrapper {
+    margin-top: 7rem;
 }
 
-.statistic .content {
-    gap: 8px;
-    display: flex;
-    align-items: center;
-}
-
-.statistic .reviews__top img {
-    width: 68.09px;
-    height: 68.07px;
-
-}
-
-.statistic .reviews__border {
-    border-right: 1px solid #CDCDCD;
-    border-left: 1px solid #CDCDCD;
-   
-  justify-content: center;
-}
-
-.statistic .reviews__bottom h2 {
-
-    font-size: 36px;
+.wrapper .wrapper-content h2 {
     font-weight: 600;
-    line-height: 57.6px;
-    color: #29387E;
+    font-size: 40px;
+    line-height: 64px;
+    color: var(--secondary-color);
 
 
 }
 
-.statistic .reviews__bottom p {
-
-    font-size: 24px;
+.wrapper .wrapper-content p {
     font-weight: 500;
+    font-size: 24px;
     line-height: 38.4px;
-
-    color: #838383;
-
+    color: #3A3A3A;
 }
 
-@media (max-width: 1200px) {
-
-
-    .statistic .row {
-
-        margin-top: 27px !important;
-        margin-bottom: 41px;
-        /* width: 343px; */
-        padding: 8px 12px 8px 12px;
-        border-radius: 16px;
-        width: 100%;
+@media (max-width:992px) {
+    .wrapper {
+        margin-top: 24px;
     }
 
-
-    .statistic .content {
-        gap: 0px;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .statistic .reviews__top img {
-        width: 30px;
-        height: 30px;
-
-    }
-
-    .statistic .reviews__bottom {
-        text-align: center;
-    }
-
-    .statistic .reviews__bottom h2 {
-
-
-
-        font-size: 18px;
-
-        line-height: 28.8px;
+    .wrapper .wrapper-content h2 {
+        font-size: 24px;
+        line-height: 38.4px;
 
 
     }
 
-    .statistic .reviews__bottom p {
-
-
+    .wrapper .wrapper-content p {
         font-size: 12px;
-
         line-height: 19.2px;
-
-
 
     }
 }
