--- a/public/frontend/assets/css/home.css
+++ b/public/frontend/assets/css/home.css
@@ -1238,8 +1238,8 @@ height: 100%; */
 }
 
 
-.chatbot .chatbot__img-container-phone{
-    display: none !important; 
+.chatbot .chatbot__img-container-phone {
+    display: none !important;
 }
 
 .chatbot__img-container-desktop {
@@ -1369,12 +1369,12 @@ height: 100%; */
         text-align: center;
     }
 
-    .chatbot   .chatbot__img-container-desktop {
+    .chatbot .chatbot__img-container-desktop {
         display: none;
     }
 
 
-    .chatbot .chatbot__img-container-phone{
+    .chatbot .chatbot__img-container-phone {
         display: block !important;
         position: relative;
         margin-top: 86.52px;
@@ -1403,4 +1403,119 @@ height: 100%; */
         width: 123.87px;
         height: 158.23px;
     }
+}
+
+
+/*  ################################## features###############################################  */
+.features {
+    margin-top: 71.14px;
+}
+
+.features .features__header h2 {
+
+    font-size: 40px;
+    font-weight: 600;
+    line-height: 64px;
+    color: #29387E;
+    position: relative;
+
+}
+
+
+.features .features__header h2::before {
+    position: absolute;
+    content: attr(data-text);
+    top: -25px;
+    inset-inline-start: 0;
+    font-weight: 600;
+    text-wrap: nowrap;
+    -webkit-background-clip: text;
+    background-clip: text;
+    /* -webkit-text-stroke: 4px rgba(131, 131, 131, .1); */
+    text-shadow:
+        0 0 3px rgba(131, 131, 131, .1),
+        0 0 3px rgba(131, 131, 131, .1),
+        0 0 3px rgba(131, 131, 131, .1),
+        0 0 3px rgba(131, 131, 131, .1),
+        0 0 3px rgba(131, 131, 131, .1),
+        0 0 3px rgba(131, 131, 131, .1),
+        0 0 3px rgba(131, 131, 131, .1),
+        0 0 3px rgba(131, 131, 131, .1),
+        0 0 3px rgba(131, 131, 131, .1),
+        0 0 3px rgba(131, 131, 131, .1),
+        0 0 3px rgba(131, 131, 131, .1),
+        0 0 3px rgba(131, 131, 131, .1),
+        0 0 3px rgba(131, 131, 131, .1);
+    font-size: 48px;
+    z-index: -1;
+    color: rgba(233 242 250);
+
+}
+
+
+
+.features .features__header p {
+
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 38.4px;
+    color: #525252;
+
+    margin-top: 16px;
+    margin-bottom: 40px;
+}
+
+
+@media (max-width: 992px) {
+
+    .features .features__header h2::before {
+        -webkit-text-stroke: 1px rgba(131, 131, 131, .1);
+        inset-inline: auto;
+        font-size: 24px;
+        font-weight: 600;
+        line-height: 38.4px;
+        top: -20px;
+    }
+
+    .features .features__header h2 {
+        font-size: 24px;
+        line-height: 38.4px;
+
+
+
+
+    }
+
+
+    .features .features__header p {
+        font-size: 12px;
+        line-height: 19.2px;
+        margin-top: 8px;
+        margin-bottom: 20px;
+
+    }
+
+
+
+}
+
+
+@media (max-width: 768px) {
+    .features  {
+        text-align: center;
+        margin-top: 49.61;
+    }
+
+    .features .features__header h2 {
+        text-align: center;
+    }
+
+    .features .features__header p {
+        text-align: center;
+    }
+
+  
+
+
+  
 }
