--- a/public/frontend/assets/css/faq.css
+++ b/public/frontend/assets/css/faq.css
@@ -87,6 +87,7 @@
     /* gap: 18px; */
     /* align-items: center; */
     background-color: #FFFFFF;
+    height: 100%;
 
 }
 
@@ -197,11 +198,13 @@
         /* 12px */
         line-height: 1.2rem !important;
         /* 19.2px */
+        height: 100%;
     }
 
     .faq_box_content {
         min-width: 290px;
-        min-height: 29px;
+        min-height: 29px !important;
+        height: 100% !important;
         padding: 20px;
     }
 
