--- a/public/assets/frontend/css/style.css
+++ b/public/assets/frontend/css/style.css
@@ -63,6 +63,10 @@
   color:var(--tp-theme-2);
 }
 
+p {
+    margin: 0 !important;
+}
+
 @media (min-width: 1400px) {
   .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
     max-width: 1200px;
@@ -75,7 +79,7 @@
 }
 
 /*---------------------------------
-  typography css start 
+  typography css start
 ---------------------------------*/
 body {
   font-family: var(--tp-ff-body);
@@ -306,7 +310,7 @@ input[type=color] {
 }
 
 /*---------------------------------
-    common classes css start 
+    common classes css start
 ---------------------------------*/
 .w-img img {
   width: 100%;
@@ -426,7 +430,7 @@ input[type=color] {
 }
 .lang-btn:hover{
   background-color: var(--tp-common-white) !important;
- 
+
 
 }
 .tp-btn::after {
@@ -1697,7 +1701,7 @@ input[type=color] {
 
 .mobile-menu.mean-container {
   margin-bottom: 50px;
- 
+
 }
 
 .offcan-social-title {
@@ -2574,7 +2578,7 @@ input[type=color] {
   position: absolute;
   background-color: #fff;
   width: 270px;
- 
+
   z-index: 999;
   margin-left: 0;
   padding: 30px 0px;
@@ -2604,7 +2608,7 @@ input[type=color] {
   position: relative;
   letter-spacing: 1px;
   font-weight: 500;
-  
+
 }
 
 .tp-header__main-menu nav ul li .submenu li:hover > a {
