--- a/public/frontend/assets/css/about.css
+++ b/public/frontend/assets/css/about.css
@@ -204,7 +204,7 @@ background-color: #00000014;
   padding-bottom: 15px;
   }
   .about-faq-right__content p{
-    color: var(--white-color);
+    color: #211F54;
     padding: 0px 25px;
     padding-bottom: 45px;
     font-weight: 400;
