--- a/public/frontend/assets/css/faq.css
+++ b/public/frontend/assets/css/faq.css
@@ -1,5 +1,5 @@
 .hero{
-    background-image: url('../images/faq/background-img.svg');
+    background-image: url('../images/background-img.webp');
 }
 /***********************FAQ***********************/
 .faq_hero_container_section {
