--- a/public/frontend/assets/css/main.css
+++ b/public/frontend/assets/css/main.css
@@ -109,7 +109,7 @@ a {
     font-weight: 600;
     /* line-height: 25.6px; */
     text-align: center;
-    padding: 12px 32px;
+    padding: 12px;
     min-width: 150px;
 }
 
@@ -416,7 +416,7 @@ a {
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url('../images/faq/background-img.svg');
+    background-image: url('../images/faq/background-img.webp');
 }
 
 .hero-image-header-up h1 {
@@ -514,8 +514,8 @@ margin-bottom: 14px;
 
         line-height: 38.4px;
         margin-bottom: 8px;
-   
-        
+
+
     }
 }
 
