--- a/public/frontend/assets/css/blog.css
+++ b/public/frontend/assets/css/blog.css
@@ -5,17 +5,25 @@
     text-align: start;
     /**/
     margin-top: 15px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 .features-image-blog{
     width: 100%;
-    height: 100%;
+    height: 240px;
     border-radius: 1rem 1rem 0px 0px;
- 
+    object-fit: cover;
+
 
 }
 .blog-content{
-   
+
       padding: 22px;
+      height: 100%;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
 }
 
 
@@ -48,20 +56,20 @@
 
 
 .pagination .page-item {
-  
+
     padding: 5px 4px 5px 4px !important;
-    
+
     border-radius: 4px !important;
-    
+
     background: #FFFFFF !important ;
     border: 1px solid #E4E6EE !important;
     margin: 0 6px
-    
-    
-    
-    
+
+
+
+
        }
-    
+
        .pagination .page-item .page-link {
           font-size: 14px;
     font-weight: 700;
@@ -70,19 +78,19 @@
     color: #29387E;
     border: none;
        }
-    
+
        .pagination .page-item.active {
           background: #29387E !important;
-    
+
        }
        .pagination .page-item.active  .page-link {
           color:#FFFFFF !important;
           background: #29387E !important;
        }
-      
+
        .pagination .page-item.disabled{
         background: #C8C8C8 !important;
-    
+
        }
        .pagination .page-item.disabled .page-link {
           background: #C8C8C8 !important;
